foreign stubs